--- a/app/views/patients/dashboards/show.html.erb
+++ b/app/views/patients/dashboards/show.html.erb
@@ -1,3 +1,3 @@
 <div class="flex flex-col items-center mt-48">
-  <%= render "shared/presentation_card", photo: @patient.user.profile_photo, name: @patient.full_name, email: @patient.email %>
+  <%= render "shared/presentation_card", record: @patient %>
 </div>
