--- a/app/views/layouts/navbar/_menu_user.html.erb
+++ b/app/views/layouts/navbar/_menu_user.html.erb
@@ -15,7 +15,8 @@
   </div>
   <ul class="py-2" aria-labelledby="user-menu-button" id="user-menu">
     <li><%= link_to "Minha página", dispatches_path %></li>
-    <li><%= link_to "Editar", edit_user_registration_path %></li>
+    <li><%= link_to "Editar dados de usuário", edit_user_registration_path %></li>
+    <%= render "layouts/navbar/edit_record" %>
     <li><%= link_to "Logout", destroy_user_session_path, data: { turbo_method: :delete } %></li>
   </ul>
 </div>
