--- a/app/views/patients/surgeries/edit.html.erb
+++ b/app/views/patients/surgeries/edit.html.erb
@@ -1,9 +1,9 @@
 <div class="container">
   <div class="w-6/12 mx-auto">
     <%= fudgeball_return_button patient_surgeries_path(@patient) %>
-    <h2>Cadastrar nova cirurgia</h2>
+    <h2>Editar cirurgia</h2>
 
-    <%= fudgeball_form model: @surgery, url: patient_surgeries_path(@patient), class: "mt-8" do |form| %>
+    <%= fudgeball_form model: @surgery, url: patient_surgery_path(@patient, @surgery), method: :patch, class: "mt-8" do |form| %>
       <%= fudgeball_form_alert class: "my-4" %>
 
       <%= form.input :date, :date, autofocus: true, required: true, class: "w-full" %>
