--- a/app/views/patients/surgeries/show.html.erb
+++ b/app/views/patients/surgeries/show.html.erb
@@ -10,13 +10,18 @@
       <p class="mt-2"><span class="font-bold">Data da alta:</span> <%= @surgery.discharged_at.strftime("%d/%m/%Y") %></p>
       <p class="mt-2"><span class="font-bold">Tempo de internação:</span> <%= (@surgery.discharged_at - @surgery.date).to_i %> dia(s)</p>
     <% elsif current_user.doctor? %>
-      <%= fudgeball_form model: @surgery, url: patient_surgery_path(@patient, @surgery), method: :patch, class: "mt-2" do |form| %>
+      <%= fudgeball_form model: @surgery, url: patient_surgery_path(@patient, @surgery, mode: :update_discharged_at), method: :patch, class: "mt-2" do |form| %>
         <div class="flex items-center">
           <p class="mr-3"><span class="font-bold">Data da alta:</span></p>
           <%= form.input :discharged_at, :date, label: false, required: true, class: "mr-3" %>
           <%= form.submit "Salvar data da alta" %>
         </div>
       <% end %>
+    <% end %>
+
+    <p class="font-bold mt-8">Medicamentos usados</p>
+    <% @surgery.medications.each do |medication| %>
+      <p class="mt-2"><%= medication.name %> | Dosagem: <%= medication.dosage %></p>
     <% end %>
   </div>
 </div>
