--- a/app/views/patients/shared/surgeries/_medications.html.erb
+++ b/app/views/patients/shared/surgeries/_medications.html.erb
@@ -8,7 +8,7 @@
       </tr>
     </thead>
     <tbody>
-      <% medications.each do |medication| %>
+      <% surgery.medications.each do |medication| %>
         <tr id="<%= dom_id medication %>" class="bg-white border-b dark:bg-gray-800 dark:border-gray-700 hover:bg-gray-50">
           <td class="px-6 py-4"><%= medication.name %></td>
           <td class="px-6 py-4"><%= medication.dosage %></td>
@@ -17,3 +17,7 @@
     </tbody>
   </table>
 </div>
+
+<%= tag.div class: "mt-8 flex justify-center" do %>
+  <%= fudgeball_button "Adicionar medicamentos", url: %>
+<% end if current_user.doctor? %>
