--- a/app/views/patients/surgeries/show.html.erb
+++ b/app/views/patients/surgeries/show.html.erb
@@ -3,25 +3,8 @@
   <div class="mt-8">
     <%= fudgeball_form_alert class: "my-4" %>
     <p class="mt-2"><span class="font-bold">Paciente:</span> <%= @surgery.patient.full_name %></p>
-    <p class="mt-2"><span class="font-bold">Data da cirurgia:</span> <%= @surgery.date.strftime("%d/%m/%Y") %></p>
-    <p class="mt-2"><span class="font-bold">Tipo da cirurgia:</span> <%= t(@surgery.classification, scope: "activerecord.attributes.surgery/classification") %></p>
 
-    <% if @surgery.discharged_at.present? %>
-      <p class="mt-2"><span class="font-bold">Data da alta:</span> <%= @surgery.discharged_at.strftime("%d/%m/%Y") %></p>
-      <p class="mt-2"><span class="font-bold">Tempo de internação:</span> <%= (@surgery.discharged_at - @surgery.date).to_i %> dia(s)</p>
-    <% elsif current_user.doctor? %>
-      <%= fudgeball_form model: @surgery, url: patient_surgery_path(@patient, @surgery, mode: :update_discharged_at), method: :patch, class: "mt-2" do |form| %>
-        <div class="flex items-center">
-          <p class="mr-3"><span class="font-bold">Data da alta:</span></p>
-          <%= form.input :discharged_at, :date, label: false, required: true, class: "mr-3" %>
-          <%= form.submit "Salvar data da alta" %>
-        </div>
-      <% end %>
-    <% end %>
-
-    <%= render "patients/surgeries/show/medications", medications: @surgery.medications if @surgery.medications.any? %>
-    <%= tag.div class: "mt-8 flex justify-center" do %>
-      <%= fudgeball_button "Adicionar medicamentos", url: edit_patient_surgery_path(@patient, @surgery, mode: "add_medication") %>
-    <% end if current_user.doctor? %>
+    <%= render "patients/shared/surgeries/info", patient: @patient, surgery: @surgery, url: patient_surgery_path(@patient, @surgery, mode: :update_discharged_at) %>
+    <%= render "patients/shared/surgeries/medications", patient: @patient, surgery: @surgery, url: edit_patient_surgery_path(@patient, @surgery, mode: :add_medication) %>
   </div>
 </div>
