--- a/app/views/patients/diagnostics/prescriptions/edit.html.erb
+++ b/app/views/patients/diagnostics/prescriptions/edit.html.erb
@@ -1,14 +1,18 @@
 <div class="container">
-  <%= fudgeball_return_button patient_diagnostic_treatments_path(@patient, @diagnostic) %>
+  <%= fudgeball_return_button @return_url %>
   <div class="w-6/12 mx-auto">
     <h2>Editar receita</h2>
 
-    <%= fudgeball_form model: @prescription, url: patient_diagnostic_prescription_path(@patient, @diagnostic, @prescription), method: :patch, class: "mt-8" do |form| %>
+    <%= fudgeball_form model: @prescription, url: patient_diagnostic_prescription_path(@patient, @diagnostic, @prescription, mode: params[:mode]), method: :patch, class: "mt-8" do |form| %>
       <%= fudgeball_form_alert class: "my-4" %>
 
-      <%= form.input :date, :date, required: true, autofocus: true, class: "w-full" %>
-      <%= form.input :medications_count, :number, required: true, class: "w-full" %>
-      <%= form.attach_input :file, accept: "image/png, image/jpeg, application/pdf", class: "w-full" %>
+      <% if params[:mode] == "add_medication" %>
+        <%= form.input :medications_count, :number, required: true, class: "w-full" %>
+      <% else %>
+        <%= form.input :date, :date, required: true, autofocus: true, class: "w-full" %>
+        <%= form.input :medications_count, :number, required: true, class: "w-full" %>
+        <%= form.attach_input :file, accept: "image/png, image/jpeg, application/pdf", class: "w-full" %>
+      <% end %>
 
       <%= form.submit "Salvar", class: "mt-8 w-full" %>
     <% end %>
