--- a/app/views/doctors/show.html.erb
+++ b/app/views/doctors/show.html.erb
@@ -1,6 +1,6 @@
 <div class="container">
   <div class="flex flex-col items-center">
-    <h2 class="mt-48">Seja bem vindo(a), <%= @doctor.name %>!</h2>
+    <%= tag.h2 "Seja bem vindo(a), #{@doctor.name}!", class: "mt-48" if @doctor.user == current_user %>
 
     <div class="mt-8 w-full flex justify-center">
       <%= render "shared/presentation_card", record: @doctor %>
