--- a/app/views/patients/index.html.erb
+++ b/app/views/patients/index.html.erb
@@ -2,8 +2,8 @@
   <div class="w-full">
     <h2>Pacientes</h2>
     <%= fudgeball_form url: patients_path, method: :get, class: "mt-8 flex justify-center items-center" do |form| %>
-      <%= form.input :last_name, :text, autofocus: true, required: true, label: false, placeholder: "Buscar por sobrenome", class: "w-96 mr-24" %>
-      <%= form.submit "Buscar", class: "ml-4" %>
+      <%= form.input :last_name, :text, autofocus: true, required: true, label: false, placeholder: "Buscar por sobrenome", class: "w-96 mr-4" %>
+      <%= form.submit "Buscar" %>
     <% end %>
 
     <%= render "patients/index/patients", patients: @patients if @patients.present? %>
