--- a/app/views/doctors/index/_doctors.html.erb
+++ b/app/views/doctors/index/_doctors.html.erb
@@ -1,5 +1,5 @@
 <div class="relative mt-8 overflow-x-auto shadow-md sm:rounded-lg">
-  <table class="w-full text-sm text-left text-gray-500">
+  <table class="w-full text-base text-left text-gray-500">
     <thead class="text-xs text-gray-700 uppercase bg-blue-100">
       <tr>
         <th scope="col" class="px-6 py-3">Nome</th>
