--- a/app/views/layouts/navbar/_menu_items.html.erb
+++ b/app/views/layouts/navbar/_menu_items.html.erb
@@ -1,8 +1,10 @@
 <div class="items-center justify-between hidden w-full md:flex md:w-auto md:order-1" id="mobile-menu-2">
-  <ul class="flex flex-col font-medium p-4 md:p-0 mt-4 border border-gray-100 rounded-lg bg-gray-50 md:flex-row md:space-x-8 md:mt-0 md:border-0 md:bg-white dark:bg-gray-800 md:dark:bg-gray-900 dark:border-gray-700">
+  <ul class="flex flex-col font-medium p-4 md:p-0 mt-4 border border-gray-100 rounded-lg bg-gray-50 md:flex-row md:space-x-8 md:mt-0 md:border-0 md:bg-white">
     <%= tag.li do %>
       <%= link_to "Buscar pacientes", patients_path %>
     <% end if current_user&.classification.in?(%w[doctor admin]) %>
-    <li><%= link_to "Buscar médicos", doctors_path %></li>
+    <%= tag.li do %>
+      <li><%= link_to "Buscar médicos", doctors_path %></li>
+    <% end if current_user.present? %>
   </ul>
 </div>
