--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -1,12 +1,12 @@
 <div class="container flex items-center justify-center">
-  <div class="w-3/12">
+  <div class="md:w-3/12">
     <h2>Editar <%= resource.class.model_name.human %></h2>
 
     <%= fudgeball_form model: resource, url: registration_path(resource_name), method: :patch, class: "mt-8" do |form| %>
       <%= render "shared/error_messages", resource: %>
 
       <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
-        <div>Currently waiting confirmation for: <%= resource.unconfirmed_email %></div>
+        <div>Aguardando confirmação para: <%= resource.unconfirmed_email %></div>
       <% end %>
 
       <%= form.input :email, :email, required: true, autofocus: true, autocomplete: "email", class: "w-full" %>
@@ -15,12 +15,12 @@
       <%= form.input :password, :password, autocomplete: "new-password", class: "w-full" %>
       <%= form.input :password_confirmation, :password, autocomplete: "new-password", class: "w-full" %>
       <%= form.input :current_password, :password, required: true, autocomplete: "current-password", class: "w-full" %>
-      <%= form.attach_input :profile_photo, accept: "image/png, image/jpeg" %>
+      <%= form.attach_input :profile_photo, accept: "image/png, image/jpeg", class: "w-full" %>
 
       <%= form.submit "Atualizar dados", class: "mt-5 w-full" %>
     <% end %>
 
-    <div class="mt-5">
+    <div class="mt-5 mb-5">
       <%= link_to "Cancelar", dispatches_path %>
     </div>
   </div>
