--- a/app/views/patients/shared/_aside_menu.html.erb
+++ b/app/views/patients/shared/_aside_menu.html.erb
@@ -1,4 +1,4 @@
-<div id="aside-menu">
+<div id="aside-menu" class="absolute top-0 left-0">
   <button data-drawer-target="default-sidebar" data-drawer-toggle="default-sidebar" aria-controls="default-sidebar" type="button" class="inline-flex items-center p-2 mt-2 ml-3 text-sm text-gray-500 rounded-lg md:hidden hover:bg-gray-100 focus:outline-none focus:ring-2 focus:ring-gray-200 dark:text-gray-400 dark:focus:ring-gray-600">
     <span class="sr-only">Abrir menu lateral</span>
     <svg class="w-6 h-6" aria-hidden="true" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg">
