--- a/app/views/patients/surgeries/show.html.erb
+++ b/app/views/patients/surgeries/show.html.erb
@@ -1,4 +1,4 @@
-<div id="sub-content" class="container">
+<div id="sub-content" class="container mt-16 md:mt-0">
   <%= fudgeball_return_button patient_surgeries_path(@patient) %>
   <div class="mt-8">
     <%= fudgeball_form_alert class: "my-4" %>
