--- a/app/views/patients/biodata/index.html.erb
+++ b/app/views/patients/biodata/index.html.erb
@@ -1,3 +1,3 @@
-<div class="container">
+<div class="container mt-16 md:mt-0">
   <%= render "patients/biodata/index/biodata", biodata: @biodata if @biodata.any? %>
 </div>
