--- a/app/views/patients/consultations/index.html.erb
+++ b/app/views/patients/consultations/index.html.erb
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="container mt-16 md:mt-0">
   <%= fudgeball_button "Nova consulta", url: new_patient_consultation_path(@patient) if current_user.doctor? %>
 
   <%= render "patients/consultations/index/consultations", consultations: @consultations if @consultations.any? %>
