--- a/app/views/patients/consultations/show.html.erb
+++ b/app/views/patients/consultations/show.html.erb
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="container mt-16 md:mt-0">
   <%= fudgeball_return_button patient_consultations_path(@patient) %>
   <div class="mt-8">
     <p class="mt-2"><span class="font-bold">Paciente:</span> <%= @consultation.patient.full_name %></p>
