--- a/app/views/patients/diagnostics/treatments/index.html.erb
+++ b/app/views/patients/diagnostics/treatments/index.html.erb
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="container mt-16 md:mt-0">
   <% if @treatments.any? %>
     <%= fudgeball_button "Novo tratamento", url: new_patient_diagnostic_treatment_path(@patient, @diagnostic) if current_user.doctor? %>
     <%= render "patients/diagnostics/treatments/index/treatments", treatments: @treatments if @treatments.any? %>
