--- a/app/views/patients/diagnostics/treatments/new.html.erb
+++ b/app/views/patients/diagnostics/treatments/new.html.erb
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="container mt-16 md:mt-0">
   <%= fudgeball_return_button patient_diagnostic_treatments_path(@patient, @diagnostic) %>
   <h2 class="mt-8">Cadastrar novo tratamento</h2>
   <p class="mt-4">
