--- a/app/views/patients/exams/index.html.erb
+++ b/app/views/patients/exams/index.html.erb
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="container mt-16 md:mt-0">
   <%= fudgeball_button "Novo exame", url: new_patient_exam_path(@patient) if current_user.doctor? %>
 
   <%= render "patients/exams/index/exams", exams: @exams if @exams.any? %>
