--- a/app/views/patients/surgeries/index.html.erb
+++ b/app/views/patients/surgeries/index.html.erb
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="container mt-16 md:mt-0">
   <%= fudgeball_button "Nova cirurgia", url: new_patient_surgery_path(@patient) if current_user.doctor? %>
 
   <%= render "patients/surgeries/index/surgeries", surgeries: @surgeries if @surgeries.any? %>
