--- a/app/views/patients/diagnostics/new.html.erb
+++ b/app/views/patients/diagnostics/new.html.erb
@@ -1,5 +1,5 @@
-<div class="container">
-  <div class="w-6/12 mx-auto">
+<div class="container mt-16 md:mt-0">
+  <div class="md:w-6/12 mx-auto">
     <%= fudgeball_return_button patient_diagnostics_path(@patient) %>
     <h2>Cadastrar novo diagnóstico</h2>
 
