--- a/app/views/patients/shared/surgeries/_info.html.erb
+++ b/app/views/patients/shared/surgeries/_info.html.erb
@@ -6,11 +6,5 @@
   <p class="mt-2"><span class="font-bold">Data da alta:</span> <%= surgery.discharged_at.strftime("%d/%m/%Y") %></p>
   <p class="mt-2"><span class="font-bold">Tempo de internação:</span> <%= (surgery.discharged_at - surgery.date).to_i %> dia(s)</p>
 <% elsif current_user.doctor? %>
-  <%= fudgeball_form model: surgery, url:, method: :patch, class: "mt-2" do |form| %>
-    <div class="flex items-center">
-      <p class="mr-3"><span class="font-bold">Data da alta:</span></p>
-      <%= form.input :discharged_at, :date, label: false, required: true, class: "mr-3" %>
-      <%= form.submit "Salvar data da alta" %>
-    </div>
-  <% end %>
+  <%= render "patients/shared/surgeries/discharged_at_form", surgery:, url: %>
 <% end %>
