--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -1,14 +1,15 @@
-<nav class="bg-white border-b border-gray-200 dark:bg-gray-900">
+<nav class="bg-white fixed w-full z-20 top-0 left-0 border-b border-gray-200">
   <div class="flex flex-wrap items-center justify-between mx-auto p-4">
-  <%= render "layouts/navbar/logo" %>
-  <div class="flex items-center md:order-2">
+    <%= render "layouts/navbar/logo" %>
+    <div class="flex items-center | md:order-2">
 
-    <% if user_signed_in? %>
-      <%= render "layouts/navbar/menu_user" %>
-    <% else %>
-      <%= fudgeball_button "Entrar", url: new_user_session_path %>
-    <% end %>
-    <%= render "layouts/navbar/menu_trigger" if current_user.present? %>
+      <% if user_signed_in? %>
+        <%= render "layouts/navbar/menu_user" %>
+      <% else %>
+        <%= fudgeball_button "Entrar", url: new_user_session_path %>
+      <% end %>
+      <%= render "layouts/navbar/menu_trigger" if current_user.present? %>
+    </div>
+    <%= render "layouts/navbar/menu_items" if current_user.present? %>
   </div>
-  <%= render "layouts/navbar/menu_items" if current_user.present? %>
 </nav>
