--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,7 +13,7 @@
 
   <body>
     <%= render "layouts/navbar" %>
-    <main class="container mx-auto mt-10 px-5 flex">
+    <main class="container mx-auto px-5 flex mt-24 | md:mt-32">
       <%= yield %>
     </main>
   </body>
