--- a/app/views/layouts/patients/dashboards.html.erb
+++ b/app/views/layouts/patients/dashboards.html.erb
@@ -13,7 +13,7 @@
 
   <body>
     <%= render "layouts/navbar" %>
-    <main class="container mx-auto md:mt-10 px-5 flex relative">
+    <main class="container mx-auto px-5 flex relative mt-24 | md:mt-32">
       <%= render "patients/shared/aside_menu", patient: @patient, doctor: @doctor, access_control: @access_control %>
       <div id="content" class="p-4 md:ml-64 mb-5 container">
         <%= yield %>
