--- a/app/views/patients/dashboards/show.html.erb
+++ b/app/views/patients/dashboards/show.html.erb
@@ -1,4 +1,4 @@
-<div class="flex flex-col items-center mt-16 md:mt-48">
+<div class="flex flex-col items-center mt-24 | md:mt-40">
   <%= tag.h2 "Seja bem vindo(a), #{@patient.name}!" if @patient.user == current_user %>
 
   <div class="mt-8 w-full flex justify-center">
