--- a/app/views/patients/diagnostics/index.html.erb
+++ b/app/views/patients/diagnostics/index.html.erb
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="container mt-16 md:mt-0">
   <% if @diagnostics.any? %>
     <%= fudgeball_button "Novo diagnóstico", url: new_patient_diagnostic_path(@patient) if current_user.doctor? %>
     <%= render "patients/diagnostics/index/diagnostics", diagnostics: @diagnostics %>
