--- a/app/views/patients/diagnostics/prescriptions/medication_prescriptions/new.html.erb
+++ b/app/views/patients/diagnostics/prescriptions/medication_prescriptions/new.html.erb
@@ -1,8 +1,8 @@
-<div id="sub-content" class="container">
+<div id="sub-content" class="container mt-16 md:mt-0">
   <div class="flex justify-between items-center">
     <%= fudgeball_return_button edit_patient_diagnostic_prescription_path(@patient, @diagnostic, @prescription, mode: params[:mode]) %>
   </div>
-  <h2>Inserir medicamentos</h2>
+  <h2 class="mt-5 md:mt-0">Inserir medicamentos</h2>
   <%= fudgeball_form model: @prescription, url: patient_diagnostic_prescription_medication_prescriptions_path(@patient, @diagnostic, @prescription), method: :post do |form| %>
     <div class="flex flex-wrap justify-around">
       <%= fudgeball_form_alert class: "my-4 mx-auto" %>
