--- a/app/views/patients/diagnostics/surgeries/new.html.erb
+++ b/app/views/patients/diagnostics/surgeries/new.html.erb
@@ -1,7 +1,7 @@
-<div class="container">
+<div class="container mt-16 md:mt-0">
   <%= fudgeball_return_button patient_diagnostic_treatments_path(@patient, @diagnostic) %>
-  <div class="w-6/12 mx-auto">
-    <h2>Cadastrar nova cirurgia</h2>
+  <div class="md:w-6/12 mx-auto">
+    <h2 class="mt-5 md:mt-0">Cadastrar nova cirurgia</h2>
 
     <%= fudgeball_form model: @surgery, url: patient_diagnostic_surgeries_path(@patient, @diagnostic), method: :post, class: "mt-8" do |form| %>
       <%= fudgeball_form_alert class: "my-4" %>
