--- a/app/views/patients/diagnostics/treatments/show/_prescription.html.erb
+++ b/app/views/patients/diagnostics/treatments/show/_prescription.html.erb
@@ -1,5 +1,5 @@
 <p class="mt-2"><span class="font-bold">Tipo de tratamento:</span> <%= treatable.class.model_name.human %></p>
-<div class="mt-2">
+<div class="mt-3 <%= "flex justify-center" if mobile? %>">
   <%= fudgeball_button "Baixar receita", url: rails_blob_path(treatable.file, disposition: :attachment) %>
 </div>
 
