--- a/app/views/layouts/navbar/_logo.html.erb
+++ b/app/views/layouts/navbar/_logo.html.erb
@@ -1,4 +1,4 @@
 <%= link_to root_path, class: "flex items-center" do %>
-  <img src="https://flowbite.com/docs/images/logo.svg" class="h-8 mr-3" alt="Flowbite Logo" />
+  <%= image_tag "whc-logo.svg", class: "h-9 mr-3" %>
   <span class="self-center font-semibold whitespace-nowrap text-base md:text-2xl">Web Healthy Care</span>
 <% end %>
