--- a/app/views/patients/access_controls/index.html.erb
+++ b/app/views/patients/access_controls/index.html.erb
@@ -1,5 +1,7 @@
-<div class="container">
-  <div class="mt-16 md:mt-0">
+<div class="container mt-16 md:mt-0">
+  <h2>Autorizações</h2>
+  <p class="mt-3 text-center">Gerencie as solicitações que os médicos realizam para acessar as informações de seu histórico médico.</p>
+  <div class="mt-10">
     <%= render partial: "patients/access_controls/index/authorization", collection: @access_controls, as: :access_control, locals: { patient: @patient } %>
   </div>
 </div>
