--- a/app/views/patients/exams/index.html.erb
+++ b/app/views/patients/exams/index.html.erb
@@ -1,5 +1,15 @@
 <div class="container mt-16 md:mt-0">
-  <%= fudgeball_button "Novo exame", url: new_patient_exam_path(@patient) if current_user.doctor? %>
+  <h2>Exames</h2>
 
-  <%= render "patients/exams/index/exams", exams: @exams if @exams.any? %>
+  <div class="mt-10">
+    <% if @exams.any? %>
+      <%= fudgeball_button "Novo exame", url: new_patient_exam_path(@patient) if current_user.doctor? %>
+      <%= render "patients/exams/index/exams", exams: @exams %>
+    <% else %>
+      <p class="text-center mt-5">Não há exames para mostrar</p>
+      <div class="mt-5 flex justify-center">
+        <%= fudgeball_button "Novo exame", url: new_patient_exam_path(@patient) if current_user.doctor? %>
+      </div>
+    <% end %>
+  </div>
 </div>
