--- a/app/views/patients/surgeries/index.html.erb
+++ b/app/views/patients/surgeries/index.html.erb
@@ -1,5 +1,15 @@
 <div class="container mt-16 md:mt-0">
-  <%= fudgeball_button "Nova cirurgia", url: new_patient_surgery_path(@patient) if current_user.doctor? %>
+  <h2>Cirurgias</h2>
 
-  <%= render "patients/surgeries/index/surgeries", surgeries: @surgeries if @surgeries.any? %>
+  <div class="mt-10">
+    <% if @surgeries.any? %>
+      <%= fudgeball_button "Nova cirurgia", url: new_patient_surgery_path(@patient) if current_user.doctor? %>
+      <%= render "patients/surgeries/index/surgeries", surgeries: @surgeries %>
+    <% else %>
+      <p class="text-center mt-5">Não há cirurgias para mostrar</p>
+      <div class="mt-5 flex justify-center">
+        <%= fudgeball_button "Nova cirurgia", url: new_patient_surgery_path(@patient) if current_user.doctor? %>
+      </div>
+    <% end %>
+  </div>
 </div>
