--- a/app/views/patients/shared/_aside_menu.html.erb
+++ b/app/views/patients/shared/_aside_menu.html.erb
@@ -6,7 +6,9 @@
     </svg>
   </button>
 
-  <aside id="default-sidebar" class="fixed top-0 left-0 z-40 w-64 h-screen transition-transform -translate-x-full sm:translate-x-0" aria-label="Sidebar" style="margin-top: 65px;">
+  <% forced_margin = desktop? ? 69 : 74 %>
+
+  <aside id="default-sidebar" class="fixed top-0 left-0 z-40 w-64 h-screen transition-transform -translate-x-full sm:translate-x-0" aria-label="Sidebar" style="margin-top: <%= forced_margin %>px;">
     <div class="h-full px-3 py-4 overflow-y-auto bg-gray-50 dark:bg-gray-800">
       <ul class="space-y-2 font-medium">
         <%= render "patients/shared/aside_menu/options", patient:, doctor:, access_control: %>
