--- a/app/views/patients/shared/aside_menu/_options.html.erb
+++ b/app/views/patients/shared/aside_menu/_options.html.erb
@@ -5,7 +5,7 @@
     <%= image_tag "icons/biodata.svg", class: "w-6 h-6 text-gray-500 transition duration-75 group-hover:text-gray-900" %>
     <span class="ml-3">Biodados</span>
   <% end %>
-<% end if allow?("patients/biodata", "show", [patient, doctor]) %>
+<% end if allow?("patients/biodata", "show", [patient, doctor]) && patient.biodata.present? %>
 
 <%= tag.li do %>
   <%= link_to patient_consultations_path(patient), class: "flex items-center p-2 text-gray-900 rounded-lg hover:bg-gray-100" do %>
